# sense-glove

./: .gitignore  .gitmodules  CMakeLists.txt  setup.py
Core/SGCoreCpp/: LinkSGCoreCpp.cmake
Core/SGCoreCpp/examples/BasicCpp/: CMakeLists.txt
cmake/: utils.cmake
include/nova/: nova_glove.h
novapy/: __init__.py
src/: CMakeLists.txt  main.cc  nova_glove.cc
src/python/: CMakeLists.txt  novapy.cc
